--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_main.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/se_katalouge"
+        android:text="@string/se_katalog"
         app:backgroundTint="#BF8E55"
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
